# wikipedia-periodic-revisions

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/: wikipedia_wikiproject_climate_change_popular_pages.csv
examples/: download_artificial_intelligence.ipynb
wikipedia_tools/: __init__.py  test.ipynb
wikipedia_tools/analyzer/: feature_extractor.py  numbers_over_time.py  revisions.py
wikipedia_tools/base/wikipedia_w_time/: __init__.py  exceptions.py  util.py  wikipedia.py
wikipedia_tools/processor/: loader.py  processor.py
wikipedia_tools/scraper/: category_extractor.py  downloader.py  revision_extractor.py  wikipedia_parser.py  wikirevparser_with_time.py
wikipedia_tools/utils/: properties.py  utils.py
